# boids

./: .clang-format  .gitignore  CMakeLists.txt
res/shaders/boid/: boid.vert
src/boid/: boid.hpp
src/core/: main.cpp
src/core/graphics/: index_buffer.hpp  renderer.hpp  shader.cpp  shader.hpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
